feat: overhaul index.html to create a modern admin dashboard layout, integrate Bootstrap 5.3.8, ApexCharts, and SweetAlert2, and implement development tools for enhanced user experience

--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "description": "Clean & Modern Admin Dashboard Template - Ethanol UI",
   "main": "index.html",
   "scripts": {
+    "dev": "npx http-server -p 8080 -o --cors",
+    "serve": "npx http-server -p 8080 -o --cors",
+    "live": "npx live-server --port=8080 --open=/index.html",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
